Revert optimization - fix test module options
Signed-off-by: Daniel Kec <daniel.kec@oracle.com>