@@ -163,6 +163,7 @@
                     <argLine>
                         --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2=java.xml.bind
                         --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen=java.xml.bind
+                        --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen.xmlidref=java.xml.bind
                         --add-opens java.base/java.lang=org.glassfish.jaxb.runtime
                         --add-opens java.base/java.lang.reflect=org.glassfish.jaxb.runtime
                         --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.runtime.reflect.opt=java.xml.bind
